# curriculum-builder-crew

./: README.md  curriculum.md  pyproject.toml
input/: skill_input.json
src/curriculumbuildercrew/: crew.py  main.py
src/curriculumbuildercrew/config/: agents.yaml  tasks.yaml
src/curriculumbuildercrew/input/: skill_input.json
