[project]
name = "curriculumbuildercrew"
version = "0.1.0"
description = "curriculumBuilderCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
curriculumbuildercrew = "curriculumbuildercrew.main:run"
run_crew = "curriculumbuildercrew.main:run"
train = "curriculumbuildercrew.main:train"
replay = "curriculumbuildercrew.main:replay"
test = "curriculumbuildercrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
